--- a/style.css
+++ b/style.css
@@ -343,7 +343,7 @@ body {
 
 
   .header {
-    padding-top: 50px;
+    padding-top: 40px;
   }
 
   .header__container {
@@ -533,6 +533,209 @@ body {
   }
 
 
+  /* FOOTER END */
+
+}
+
+
+@media (max-width:450px) {
+
+
+
+  .container {
+    width: 98%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+
+
+  /* HEADER START */
+
+
+  .header {
+    padding-top: 30px;
+  }
+
+  .header__container {
+    display: flex;
+    gap: 85px;
+    align-items: center;
+    margin-bottom: 20px;
+
+  }
+
+  .header__btn {
+    width: 182px;
+    text-align: center;
+    border: 1px solid black;
+    transition: 0.2s;
+  }
+
+  .btn {
+    font-size: 14px;
+    border-radius: 6px;
+    font-weight: 700;
+  }
+
+  /* HEADER END */
+
+
+
+  /* HERO START */
+
+  .hero {
+    height: 630px;
+    background-image: url('./images/oval_tel.png');
+    background-repeat: no-repeat;
+    background-position: bottom;
+    background-size: 343px 240px;
+    padding-top: 46px;
+
+  }
+
+
+  .hero__container {
+    display: flex;
+    flex-direction: column;
+
+  }
+
+  .hero__content {
+    width: 370px;
+    background-image: url('./images/first-line.svg');
+    background-repeat: no-repeat;
+    background-size: 151px 19px;
+    background-position: 160px 20px;
+  }
+
+  .hero__content-title {
+    margin-top: 50px;
+    font-size: 38px;
+    line-height: 44px;
+    font-weight: 700;
+    margin-bottom: 25px;
+  }
+
+  .hero__content-title span {
+    font-weight: 400;
+  }
+
+  .hero__content-text {
+    font-size: 16px;
+    line-height: 28px;
+    margin-bottom: 40px;
+  }
+
+  .hero__content-btn {
+    padding: 20px 26px;
+  }
+
+
+
+
+  .hero__result {
+    margin-left: 120px;
+  }
+
+  .result__list {
+    display: flex;
+    flex-direction: column;
+  }
+
+  /* HERO END */
+
+
+
+  /* FOOTER START */
+
+
+  .footer {
+    background-color: #F3EDE7;
+  }
+
+  .footer__box {}
+
+  .features__container {
+    display: flex;
+    align-items: center;
+    border-radius: 15px;
+    background-color: #172339;
+    color: #FAF8F6;
+    position: relative;
+    top: -280px;
+    margin-top: 550px;
+  }
+
+  .features__img {
+    position: absolute;
+    top: -181px;
+    left: 15%;
+    background-image: url('./images/person-img.png');
+    background-repeat: no-repeat;
+    background-size: 252px 400px;
+  }
+
+
+  .second-line {
+    position: relative;
+    top: 435px;
+    left: 70px;
+  }
+
+  .features__content {
+    width: 330px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 338px;
+    margin-bottom: 88px;
+    text-align: center;
+  }
+
+  .features__content-title {
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 48px;
+    margin-bottom: 40px;
+  }
+
+  .features__content-title span {
+    font-weight: 400;
+  }
+
+  .features__content-text {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 32px;
+    margin-bottom: 36px;
+  }
+
+  .features__content-name {
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 32px;
+  }
+
+  .features__content-name-last {
+    line-height: 26px;
+    letter-spacing: 2.5px;
+  }
+
+  .footer__container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: -195px;
+    padding-bottom: 80px;
+  }
+
+  .footer__title {
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 32px;
+  }
+
+  */
   /* FOOTER END */
 
 }
